small layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -41,16 +41,19 @@
         scroll-behavior: smooth;
         
     }
+    .main-title{
+        padding-bottom: 30px;
+    }
     .container{
         height: 820px;
         width:390px;
     }
     .display{
-        padding: 0px 0px 40px 5px;
+        padding: 0px 0px 20px 5px;
     }
     .target{
        text-align: left;
-        padding: 20px 5px 80px 5px;
+        padding: 20px 5px 65px 5px;
     }
     .btn{
         text-align: center;
@@ -65,6 +68,6 @@
         width: 80px;
     }
     .border{
-        border: 2px transparent purple;
+        border: 2px transparent rgb(84, 48, 84);
     }
 }
